--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "motion-v": "^1.7.4",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
     "vue-router": "4"
